# phpantom_lsp

./: Cargo.toml  README.md  build.rs  codecov.yml  example.php
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  SETUP.md  todo-hover.md  todo-laravel.md  todo-testing.md  todo.md
src/: analyse.rs  classmap_scanner.rs  code_lens.rs  composer.rs  document_symbols.rs  folding.rs  inheritance.rs  inheritance_tests.rs  inlay_hints.rs  lib.rs  main.rs  resolution.rs  selection_range.rs  semantic_tokens.rs  server.rs  signature_help.rs  signature_help_tests.rs  subject_extraction.rs  test_fixtures.rs  type_hierarchy.rs  types.rs  util.rs  workspace_symbols.rs
tests/: code_action_add_override.rs  code_action_add_throws.rs  code_action_extract_function.rs  code_action_implement_methods.rs  code_action_update_docblock.rs  completion_anonymous_classes.rs  completion_attributes.rs  completion_catch.rs  completion_class_declaration.rs  completion_class_name_context.rs  completion_class_names.rs  completion_deprecated.rs  completion_generators.rs  completion_laravel.rs  completion_match_expression.rs  completion_methods.rs  completion_multiline_chains.rs  completion_namespaced_functions.rs  completion_namespaces.rs  completion_phpdoc.rs  completion_phpdoc_generation.rs  completion_properties.rs  completion_strings.rs  completion_stub_functions.rs  completion_type_hints.rs  completion_variable_names.rs  completion_variables.rs  definition_laravel.rs  definition_type_hints.rs  definition_unions.rs  definition_variables.rs  diagnostics_deprecated.rs  docblock_parsing.rs  hover.rs  (+10 more)
(+198 files in other folders)
