[package]
name = "phpantom_lsp"
version = "0.4.0"
edition = "2024"
license = "MIT"

[dependencies]
tower-lsp = { version = "0.18", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.34", features = ["full"] }
mago-syntax = "1.8"
mago-database = "1.8"
mago-span = "1.8"
bumpalo = "3"

[dev-dependencies]
tempfile = "3"
