[package]
name = "phpantom_lsp"
version = "0.5.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
tower-lsp = { version = "0.18", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.34", features = ["full"] }
mago-syntax = "1.8"
mago-database = "1.8"
mago-span = "1.8"
bumpalo = "3"
ignore = "0.4"
memchr = "2"
parking_lot = "0.12"
toml = "0.8"

[build-dependencies]
ureq = { version = "2", features = ["json"] }
tar = "0.4"
flate2 = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
datatest-stable = "0.2"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "fixture_runner"
harness = false

[[bench]]
name = "completion"
harness = false
